Set theme jekyll-theme-slate

--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: GitHub Pages Beispiel
 sass:
         sass_dir: _sass
         style: compressed
-theme: jekyll-theme-merlot
+theme: jekyll-theme-slate
